--- a/assets/scss/components/sections/_footer.scss
+++ b/assets/scss/components/sections/_footer.scss
@@ -1,6 +1,19 @@
 .footer {
 	background-color: var(--footer-color);
 	color: white;
+	position: relative;
+	margin-top: 70px;
+	&::before {
+		content: '';
+		position: absolute;
+		width: 100%;
+		height: 50px;
+		background-color: var(--footer-color);
+		top: -50px;
+		left: 0;
+		-webkit-clip-path: polygon(0 0, 0% 100%, 100% 100%);
+		clip-path: polygon(0 0, 0% 100%, 100% 100%);
+	}
 	.footer__logo {
 		width: 120px;
 		height: 55px;
@@ -54,7 +67,8 @@
 		font-size: 15px;
 		text-align: center;
 		letter-spacing: 0.03em;
-    color: rgba(white, 0.949);
-    margin-top: 20px;
+		color: rgba(white, 0.95);
+		margin-top: 20px;
+		margin-bottom: 30px;
 	}
 }
