--- a/assets/scss/components/sections/_howitwork.scss
+++ b/assets/scss/components/sections/_howitwork.scss
@@ -1,35 +1,59 @@
-.works__content {
-	display: grid;
-  row-gap: 25px;
+.works {
+	background-color: var(--first-color-very-light);
+	position: relative;
 	margin-top: 60px;
-	.work {
-		padding: 25px;
-		box-shadow: 0px 0px 6px 6px rgba(0, 77, 1, 0.15);
-		.work__title {
-			font-family: var(--title-font);
-			font-weight: var(--font-bold);
-			font-size: 22px;
-			text-align: center;
-			text-transform: uppercase;
-			color: var(--first-color-dark);
-			letter-spacing: 0.03em;
-			margin-bottom: 25px;
-			line-height: 32px;
-		}
-		.work__image {
-			margin-inline: auto;
-			display: block;
-			margin-bottom: 25px;
-		}
-		.work__paragraph {
-			text-align: center;
-			font-family: var(--paragraph-font);
-			line-height: 32px;
-			letter-spacing: 0.02em;
-		}
-		&:last-of-type .work__paragraph {
-			font-size: 15px;
-			letter-spacing: 0;
+	&::before,
+	&::after {
+		content: '';
+		position: absolute;
+		width: 100%;
+		height: 50px;
+		left: 0;
+		top: -50px;
+		background-color: var(--first-color-very-light);
+		-webkit-clip-path: polygon(0 0, 0 100%, 100% 100%);
+		clip-path: polygon(0 0, 0 100%, 100% 100%);
+	}
+	&::after {
+		top: initial;
+		bottom: -50px;
+		-webkit-clip-path: polygon(0 0, 0 100%, 100% 0);
+		clip-path: polygon(0 0, 0 100%, 100% 0);
+	}
+	.works__content {
+		display: grid;
+		row-gap: 25px;
+		margin-top: 60px;
+		.work {
+			background-color: white;
+			padding: 25px;
+			box-shadow: 0px 0px 6px 6px rgba(0, 77, 1, 0.15);
+			.work__title {
+				font-family: var(--title-font);
+				font-weight: var(--font-bold);
+				font-size: 22px;
+				text-align: center;
+				text-transform: uppercase;
+				color: var(--first-color-dark);
+				letter-spacing: 0.03em;
+				margin-bottom: 25px;
+				line-height: 32px;
+			}
+			.work__image {
+				margin-inline: auto;
+				display: block;
+				margin-bottom: 25px;
+			}
+			.work__paragraph {
+				text-align: center;
+				font-family: var(--paragraph-font);
+				line-height: 32px;
+				letter-spacing: 0.02em;
+			}
+			&:last-of-type .work__paragraph {
+				font-size: 15px;
+				letter-spacing: 0;
+			}
 		}
 	}
 }
