--- a/assets/scss/components/sections/_home.scss
+++ b/assets/scss/components/sections/_home.scss
@@ -6,17 +6,21 @@
 		font-size: 2.25rem;
 		font-weight: var(--font-bold);
 		font-family: var(--title-font);
-    margin-bottom: 20px;
+		margin-bottom: 20px;
 	}
 	&__paragraph {
 		font-size: 1rem;
 		font-family: var(--body-font);
 		line-height: 32px;
 	}
-  &__buttons {
-    column-gap: 25px;
-    margin-top: 20px;
-    margin-inline: auto;
-    width: max-content;
-  }
+	&__buttons {
+		column-gap: 25px;
+		margin-top: 20px;
+		margin-inline: auto;
+		width: max-content;
+		@include mediaXXS {
+			flex-direction: column;
+			row-gap: 20px;
+		}
+	}
 }
