--- a/assets/scss/components/sections/_about.scss
+++ b/assets/scss/components/sections/_about.scss
@@ -4,20 +4,37 @@
 		flex-direction: column;
 		row-gap: 35px;
 		margin-top: 60px;
+		@include mediaSM {
+			row-gap: 50px;
+		}
 		.about__content {
 			p.about__paragraph {
 				text-align: center;
 				line-height: 32px;
 				font-family: var(--body-font);
 				margin-bottom: 15px;
+				@include mediaSM {
+					font-size: 25px;
+					line-height: 42px;
+					margin-bottom: 20px;
+				}
 			}
 			.about__btn {
 				width: 195px;
 				margin-top: 20px;
 				margin-inline: auto;
+				@include mediaSM {
+					width: 280px;
+					height: 56px;
+					margin-top: 25px;
+				}
 				i {
 					margin-left: 8px;
 					font-size: 15px;
+					@include mediaSM {
+						margin-left: 10px;
+						font-size: 18px;
+					}
 				}
 			}
 		}
@@ -25,6 +42,10 @@
 			margin-inline: auto;
 			@include mediaXXS {
 				width: 100%;
+			}
+			@include mediaSM {
+				width: 100%;
+				height: 596px;
 			}
 		}
 	}
