--- a/assets/scss/components/sections/_formules.scss
+++ b/assets/scss/components/sections/_formules.scss
@@ -25,6 +25,12 @@
 		display: flex;
 		flex-direction: column;
 		row-gap: 40px;
+		@include mediaSM {
+			flex-direction: row;
+			gap: 45px;
+			flex-wrap: wrap;
+			margin-top: 75px;
+		}
 		.formule {
 			width: 303px;
 			height: 300px;
@@ -61,7 +67,13 @@
 	margin-top: 40px;
 	width: 265px;
 	margin-inline: auto;
+	@include mediaSM {
+		margin-top: 60px;
+	}
 	i {
 		margin-left: 5px;
+		@include mediaSM {
+			margin-left: 10px;
+		}
 	}
 }
